<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_letras"
    tools:context=".CreacionCuenta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="345dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:src="@drawable/logo_empresa" />

            <TextView
                android:id="@+id/teVNuevoPastillero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Creacion de Cuenta"
                android:textColor="@color/color_letras_principales"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teVTextoAdvSecundario"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center_horizontal"
                android:text="Todos los campos son obligatorios, no se permite el registro de menores de edad"
                android:textAlignment="center"
                android:textColor="@color/advertencias"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Nombre"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTeNombres"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/fondo_escritura"
                android:ems="10"
                android:maxLength="22"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Correo electronico"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTeNomSecCaja"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/fondo_escritura"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Telefono"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTeTelefono"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/fondo_escritura"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Genero"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvFechaNaci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Fecha de Nacimiento  "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTeNacimiento"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/fondo_escritura"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/fecha_nacimiento"
                android:inputType="date"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Contraseña"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTeContrasena"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/fondo_escritura"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/boton_fondo"
                android:fontFamily="@font/quicksand_medium"
                android:inputType="textCapWords"
                android:onClick="goToMainActivity"
                android:text="Crear Cuenta"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>